# gymfc

./: .all-contributorsrc  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Dockerfile-demo  LICENSE.txt  README.md  files1.txt  gen_pb.sh  gymfc.ini  install_dependencies.sh  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  feature_change.md
docker/environment/: Dockerfile
examples/: Moby Dick (D) - Acceso directo.lnk  README.md  pid_example.py  plot_flight.py  plot_flight_metrics.py  ppo_baselines_train.py  ppo_example.py  requirements.txt  setup.py  tf_checkpoint_evaluate.py
examples/configs/: iris.config
examples/controllers/: run_iris_pid.py  run_solo_pid.py
examples/gymfc_nf/controllers/: ZieglerNichols.py  pid.py
examples/gymfc_nf/envs/: __init__.py  base.py  continuous.py  delta.py  ramp.py  reference.py  rewards.py  states.py  step.py
examples/gymfc_nf/policies/: README.md  __init__.py  baselinespolicy.py  pbpolicy.py  pidpolicy.py  policy.py
examples/gymfc_nf/twins/nf1/: README.md  model.config  model.sdf
examples/gymfc_nf/utils/: log.py  monitor.py
gymfc/: __init__.py  gymfc.ini
gymfc/controllers/: iris_pid_eval.py  pid.py
gymfc/envs/: __init__.py  attitude_control_env.py  fc_env.py  gazebo_env.py
gymfc/envs/assets/gazebo/plugins/: AircraftConfigPlugin.cpp  AircraftModelPlugin.cpp  AircraftModelPlugin.hh  CMakeLists.txt  FlightControllerPlugin.cpp  FlightControllerPlugin.hh  QuadcopterWorldPlugin.cpp  QuadcopterWorldPlugin.hh  README.md  build_plugin.sh
gymfc/envs/assets/gazebo/plugins/msgs/: Action.proto  CommandMotorSpeed.proto  Distance.proto  DistanceSensor.proto  EscSensor.proto  MotorCommand.proto  MotorSpeed.proto  State.proto
gymfc/envs/msg/: log_playback_stats_pb2.py  time_pb2.py  world_stats_pb2.py
gymfc/msgs/: Action_pb2.py  State_pb2.py
gymfc/pygazebo/: README.md  __init__.py  pygazebo.py
gymfc/pygazebo/msg/: gz_string_pb2.py  gz_string_v_pb2.py  packet_pb2.py  publish_pb2.py  publishers_pb2.py  subscribe_pb2.py  world_control_pb2.py  world_reset_pb2.py
gymfc/tools/: plot.py
modules/: README.md
modules/digitaltwins/nf1/: README.md
tests/: README.md  check_sim_stability.py  dyno.py  run_tests.py  test_axis.py  test_start_sim.py  test_step_sim.py
(+31 files in other folders)
